<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangeLanguageActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <com.devstree.annibee.view.TextView
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:text="@string/language" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp">

        <RadioButton
            android:id="@+id/rbEnglish"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rbJapanese"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/japanese" />


        <RadioButton
            android:id="@+id/rbTraditionalChinese"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/traditional_chinese" />

        <RadioButton
            android:id="@+id/rbSimplifiedChinese"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/simplified_chinese" />

    </RadioGroup>
    </LinearLayout>

</LinearLayout>