<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_7sdp"
    android:layout_marginHorizontal="@dimen/_8sdp"
    android:layout_marginVertical="@dimen/_4sdp"
    app:cardElevation="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.devstree.annibee.view.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que"
                android:textCursorDrawable="@color/black"
                android:textStyle="bold" />

         <com.devstree.annibee.view.TextView
                android:id="@+id/txtQuestion"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/how_to_add_anniversary_or_event"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/lightest_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

         <com.devstree.annibee.view.TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans"
                android:textCursorDrawable="@color/black"
                android:textStyle="bold" />

         <com.devstree.annibee.view.TextView
                android:id="@+id/txtAnswer"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/answer" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>