<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/layout_toolbar_transparent" />

    <com.devstree.annibee.view.CircularImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/login_logo_1"
        app:riv_oval="true"/>

    <com.devstree.annibee.view.TextView
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/annibee"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <com.devstree.annibee.view.TextView
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/email_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textColorHint="@color/colorHintGray"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"

            android:drawableStart="@drawable/email_address"
            android:drawablePadding="@dimen/_4sdp"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorHintGray"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        android:onClick="onClick"
        android:text="@string/submit" />

</LinearLayout>